--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# to mouse
+set -g mode-mouse on
+set -g mode-resize-pane on
+set -g mode-select-pane on
 
 # ペインの移動2
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
