--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,9 +36,9 @@ bind k select-pane -U
 bind l select-pane -R
 
 # to mouse
-set -g mode-mouse on
-set -g mode-resize-pane on
-set -g mode-select-pane on
+#set -g mode-mouse on
+#set -g mode-resize-pane on
+#set -g mode-select-pane on
 
 # ペインの移動2
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
@@ -48,6 +48,9 @@ bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
 bind -n S-right select-pane -R
+
+# 256色ターミナル
+set-option -g default-terminal "screen-256color"
 
 # reload .tmux.conf!!
 bind r source-file ~/.tmux.conf
