--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,56 +1,68 @@
-# Prefixを＜Ctrl + b＞から＜Ctrl + t＞に変えます。
-# 例：新しいウィンドウを開くときは＜Ctrl + t＞＜c＞と押すことになります。
-# "t"以外の好きなキーにしても問題ありません。他の操作と重複しないようにしましょう。
+#utf setting
+set-window-option -g utf8 on
 
+# 256色ターミナル
+set-option -g default-terminal "screen-256color"
+
+set -g pane-active-border-fg white
+set -g pane-active-border-bg black
+
+set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-bg black
+set-window-option -g window-status-fg white
+set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-attr bold
+
+# キーバインドのPrefix
+unbind C-b
 set-option -g prefix C-t
 
 # ウィンドウの移動
-# Prefix(ここではCtrl+t)を連続入力することでウィンドウを移動させます。
-
 bind C-t next-window
 
-
 # ウィンドウを(ペインに)分割
-# ＜Prefix＞＜v＞、＜Prefix＞＜h＞と入力するだけで分割できるようにします。
-
 bind v split-window -v
 bind h split-window -h
-
 
 # ペインのサイズ変更をvim風にする
 # ＜Prefix＞＜Ctrl + { h | i | j | k }＞
 # ＜Ctrl + { h | i | j | k }＞は連続して入力可能。
 # 1回押すごとに5行(列)境界を移動させる。
-
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
 
-
 # ペインの移動1(Vim風にする)
-
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# to mouse
-#set -g mode-mouse on
-#set -g mode-resize-pane on
-#set -g mode-select-pane on
-
 # ペインの移動2
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
 # 行頭に"bind -n"をつけるとPrefixが不要になる。
-
 bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
 bind -n S-right select-pane -R
 
-# 256色ターミナル
-set-option -g default-terminal "screen-256color"
+# history size
+set-option -g history-limit 10000
+
+# appearance
+set-option -g status-utf8 on
+set-option -g status-interval 5
+set-option -g status-bg black
+
+# mouse handling
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-option -g mouse-resize-pane on
+set-option -g mode-mouse on
+
 
 # reload .tmux.conf!!
 bind r source-file ~/.tmux.conf
