--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 #utf setting
 set-window-option -g utf8 on
+# コピーモードのwindow操作をviに
+set-window-option -g mode-keys vi
 
 # 256色ターミナル
 set-option -g default-terminal "screen-256color"
@@ -19,36 +21,6 @@ set-window-option -g window-status-current-attr bold
 unbind C-b
 set-option -g prefix C-t
 
-# ウィンドウの移動
-bind C-t next-window
-
-# ウィンドウを(ペインに)分割
-bind v split-window -v
-bind h split-window -h
-
-# ペインのサイズ変更をvim風にする
-# ＜Prefix＞＜Ctrl + { h | i | j | k }＞
-# ＜Ctrl + { h | i | j | k }＞は連続して入力可能。
-# 1回押すごとに5行(列)境界を移動させる。
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
-bind -r C-j resize-pane -D 5
-bind -r C-k resize-pane -U 5
-
-# ペインの移動1(Vim風にする)
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# ペインの移動2
-# Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
-# 行頭に"bind -n"をつけるとPrefixが不要になる。
-bind -n S-left select-pane -L
-bind -n S-down select-pane -D
-bind -n S-up select-pane -U
-bind -n S-right select-pane -R
-
 # history size
 set-option -g history-limit 10000
 
@@ -63,6 +35,8 @@ set-option -g mouse-select-window on
 set-option -g mouse-resize-pane on
 set-option -g mode-mouse on
 
+# brew install reattach-to-user-namespace
+set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # reload .tmux.conf!!
 bind r source-file ~/.tmux.conf
