- tmuxのconfigを見直し - vim plugin 追加

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,33 +1,35 @@
+# キーバインド
+unbind C-b
+set-option -g prefix C-t
+
 #utf setting
 set-window-option -g utf8 on
-# コピーモードのwindow操作をviに
+# mode key
 set-window-option -g mode-keys vi
 
 # 256色ターミナル
 set-option -g default-terminal "screen-256color"
 
-set -g pane-active-border-fg white
+# ---appearance
+# border color
+set -g pane-active-border-fg green
 set -g pane-active-border-bg black
-
+# status-bar
+set-window-option -g window-status-bg green
+set-window-option -g window-status-fg white
+# status-bar; current
 set-window-option -g window-status-current-bg blue
 set-window-option -g window-status-current-fg white
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg white
-set-window-option -g window-status-current-bg blue
-set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-attr bold
-
-# キーバインドのPrefix
-unbind C-b
-set-option -g prefix C-t
 
 # history size
 set-option -g history-limit 10000
-
-# appearance
+# window number 基準
+set-option -g base-index 1
 set-option -g status-utf8 on
-set-option -g status-interval 5
-set-option -g status-bg black
+# status line
+#set-option -g status-interval 5
+#set-option -g status-bg black
 
 # mouse handling
 set-option -g mouse-select-pane on
@@ -40,3 +42,21 @@ set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # reload .tmux.conf!!
 bind r source-file ~/.tmux.conf
+
+# --- key bind
+# ペイン移動
+bind -r C-h select-pane -L
+bind -r C-j select-pane -D
+bind -r C-k select-pane -U
+bind -r C-l select-pane -R
+# ペインリサイズ関連vi風
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 1
+bind -r K resize-pane -U 1
+bind -r L resize-pane -R 2
+bind s swap-pane -U
+
+# ペイン終了 || ウィンドウ終了
+bind k run "tmux kill-pane || tmux kill-window"
+# ペイン番号表示
+bind i display-panes
