--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,30 @@
-# キーバインド
+#-Prefix
 unbind C-b
 set-option -g prefix C-t
 
-#utf setting
+#-Option
+# utf8 enabled
 set-window-option -g utf8 on
 # mode key
 set-window-option -g mode-keys vi
 
-# 256色ターミナル
+# window number 基準
+set-option -g base-index 1
+set-option -g status-utf8 on
+
+# history size
+set-option -g history-limit 10000
+
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-option -g mouse-resize-pane on
+set-option -g mode-mouse on
+
 set-option -g default-terminal "screen-256color"
 
-# ---appearance
+#-Appearance
+#set -g status-fg green
+#set -g status-bg black
 # border color
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
@@ -22,41 +36,40 @@ set-window-option -g window-status-current-bg blue
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr bold
 
-# history size
-set-option -g history-limit 10000
-# window number 基準
-set-option -g base-index 1
-set-option -g status-utf8 on
 # status line
 #set-option -g status-interval 5
 #set-option -g status-bg black
 
-# mouse handling
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
-set-option -g mode-mouse on
-
 # brew install reattach-to-user-namespace
-set-option -g default-command "reattach-to-user-namespace -l bash"
+###set-option -g default-command "reattach-to-user-namespace -l bash"
 
-# reload .tmux.conf!!
+
+#-Key bind
+# 設定リロード
 bind r source-file ~/.tmux.conf
+# 直前のウィンドウ
+bind C-t last-window
+# ウィンドウ選択画面
+bind Space choose-window
+# ペインをすべてウィンドウ分割
+bind b break-pane
+bind H split-window -v
+bind v split-window -h
 
-# --- key bind
 # ペイン移動
-bind -r C-h select-pane -L
-bind -r C-j select-pane -D
-bind -r C-k select-pane -U
-bind -r C-l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # ペインリサイズ関連vi風
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 1
-bind -r K resize-pane -U 1
-bind -r L resize-pane -R 2
-bind s swap-pane -U
+bind -r C-h resize-pane -L 6
+bind -r C-l resize-pane -R 6
+bind -r C-j resize-pane -D 6
+bind -r C-k resize-pane -U 6
+bind -r s swap-pane -U
 
 # ペイン終了 || ウィンドウ終了
-bind k run "tmux kill-pane || tmux kill-window"
+bind -r C-k run "tmux kill-pane || tmux kill-window"
 # ペイン番号表示
 bind i display-panes
