--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ set-option -g prefix C-t
 set-window-option -g utf8 on
 # mode key
 set-window-option -g mode-keys vi
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
 
 # window number 基準
 set-option -g base-index 1
@@ -14,7 +16,6 @@ set-option -g status-utf8 on
 
 # history size
 set-option -g history-limit 10000
-
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-option -g mouse-resize-pane on
@@ -43,6 +44,13 @@ set-window-option -g window-status-current-attr bold
 # brew install reattach-to-user-namespace
 ###set-option -g default-command "reattach-to-user-namespace -l bash"
 
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 #-Key bind
 # 設定リロード
@@ -50,7 +58,7 @@ bind r source-file ~/.tmux.conf
 # 直前のウィンドウ
 bind C-t last-window
 # ウィンドウ選択画面
-bind Space choose-window
+###bind Space choose-window
 # ペインをすべてウィンドウ分割
 bind b break-pane
 bind H split-window -v
@@ -70,6 +78,6 @@ bind -r C-k resize-pane -U 6
 bind -r s swap-pane -U
 
 # ペイン終了 || ウィンドウ終了
-bind -r C-k run "tmux kill-pane || tmux kill-window"
+###bind -r C-k run "tmux kill-pane || tmux kill-window"
 # ペイン番号表示
 bind i display-panes
