vim pluginとか設定とか整理整頓

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
-#-Prefix
+# reset key-bind
 unbind C-b
+# set key-bind >>> Ctl + t
 set-option -g prefix C-t
 
 #-Option
@@ -22,18 +23,6 @@ set-option -g mouse-resize-pane on
 set-option -g mode-mouse on
 
 set-option -g default-terminal "screen-256color"
-
-#-Appearance
-# border color
-set -g pane-active-border-fg green
-set -g pane-active-border-bg black
-# status-bar
-set-window-option -g window-status-bg green
-set-window-option -g window-status-fg white
-# status-bar; current
-set-window-option -g window-status-current-bg blue
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-attr bold
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
@@ -70,3 +59,74 @@ bind -r s swap-pane -U
 
 # ペイン番号表示
 bind i display-panes
+
+# ----------------------------------------------------------------------
+#     Appearance
+# ----------------------------------------------------------------------
+### Solarized  https://github.com/altercation/solarized/tree/master/tmux
+
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+####### COLOUR (Solarized light)
+###
+#### default statusbar colors
+###set-option -g status-bg white #base2
+###set-option -g status-fg yellow #yellow
+###set-option -g status-attr default
+###
+#### default window title colors
+###set-window-option -g window-status-fg brightyellow #base00
+###set-window-option -g window-status-bg default
+####set-window-option -g window-status-attr dim
+###
+#### active window title colors
+###set-window-option -g window-status-current-fg brightred #orange
+###set-window-option -g window-status-current-bg default
+####set-window-option -g window-status-current-attr bright
+###
+#### pane border
+###set-option -g pane-border-fg white #base2
+###set-option -g pane-active-border-fg brightcyan #base1
+###
+#### message text
+###set-option -g message-bg white #base2
+###set-option -g message-fg brightred #orange
+###
+#### pane number display
+###set-option -g display-panes-active-colour blue #blue
+###set-option -g display-panes-colour brightred #orange
+###
+#### clock
+###set-window-option -g clock-mode-colour green #green
+
+
