--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,16 +32,18 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-#-Key bind
 # 設定リロード
 bind r source-file ~/.tmux.conf
 # 直前のウィンドウ
 bind C-t last-window
 # ウィンドウ選択画面
 ###bind Space choose-window
+
 # ペインをすべてウィンドウ分割
 bind b break-pane
+# ペイン 水平分割
 bind H split-window -v
+# ペイン 垂直分割
 bind v split-window -h
 
 # ペイン移動
