--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
     excludesfile = ~/.gitignore
 [merge]
     tool = vimdiff
-    ff = false
+    ff = true
 [push]
     default = upstream
 [pull]
