--- a/.tmux.conf
+++ b/.tmux.conf
@@ -131,4 +131,5 @@ set-window-option -g clock-mode-colour green #green
 #### clock
 ###set-window-option -g clock-mode-colour green #green
 
-
+# ----- power line -----
+source ~/.vim/bundle/powerline/powerline/bindings/tmux/powerline.conf
