--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,8 @@ set-option -g mode-mouse on
 
 set-option -g default-terminal "screen-256color"
 
+
+set-option -g default-command "reattach-to-user-namespace -l bash"
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
