--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ set-window-option -g mode-keys vi
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# ESC キーの効きを良くする http://qiita.com/catatsuy/items/db0a471bf1eabaa21c36
+set -s escape-time 0
+
 # window number 基準
 set-option -g base-index 1
 set-option -g status-utf8 on
@@ -24,7 +27,10 @@ set-option -g mode-mouse on
 
 set-option -g default-terminal "screen-256color"
 
-
+# ----------------------------------------------------------------------
+#     Clipboard
+# ----------------------------------------------------------------------
+# クリップボードの共有 - use Bash
 set-option -g default-command "reattach-to-user-namespace -l bash"
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
@@ -33,6 +39,10 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# ----------------------------------------------------------------------
+#     Window, pane
+# ----------------------------------------------------------------------
 
 # 設定リロード
 bind r source-file ~/.tmux.conf
