--- a/.tmux.conf
+++ b/.tmux.conf
@@ -144,4 +144,6 @@ set-window-option -g clock-mode-colour green #green
 ###set-window-option -g clock-mode-colour green #green
 
 # ----- power line -----
+source ~/.vim/bundle/powerline/powerline/bindings/tmux/powerline-base.conf
 source ~/.vim/bundle/powerline/powerline/bindings/tmux/powerline.conf
+source ~/.vim/bundle/powerline/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
