--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,10 +53,13 @@ bind C-t last-window
 
 # ペインをすべてウィンドウ分割
 bind b break-pane
-# ペイン 水平分割
-bind H split-window -v
-# ペイン 垂直分割
-bind v split-window -h
+
+# window作成するとき、カレントパスを引き継ぐ  http://qiita.com/omega999/items/aa99a9f24a93efe995c1
+bind c new-window -c "#{pane_current_path}"
+# window 水平分割
+bind H split-window -v "#{pane_current_path}"
+# window 垂直分割
+bind v split-window -h "#{pane_current_path}"
 
 # ペイン移動
 bind h select-pane -L
