tmux -c のオプションつけた

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,9 +57,13 @@ bind b break-pane
 # window作成するとき、カレントパスを引き継ぐ  http://qiita.com/omega999/items/aa99a9f24a93efe995c1
 bind c new-window -c "#{pane_current_path}"
 # window 水平分割
-bind H split-window -v "#{pane_current_path}"
+unbind '"'
+bind H split-window -v -c "#{pane_current_path}"
+#bind H split-window -v
 # window 垂直分割
-bind v split-window -h "#{pane_current_path}"
+unbind '%'
+bind v split-window -h -c "#{pane_current_path}"
+#bind v split-window -h
 
 # ペイン移動
 bind h select-pane -L
