--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,10 +20,11 @@ set-option -g status-utf8 on
 
 # history size
 set-option -g history-limit 10000
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
-set-option -g mode-mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
+#set-option -g mouse-resize-pane on
+#set-option -g mode-mouse on
+set-option -g mouse on
 
 set-option -g default-terminal "screen-256color"
 
