--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,7 @@ set-option -g history-limit 10000
 #set-option -g mouse-resize-pane on
 #set-option -g mode-mouse on
 set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 set-option -g default-terminal "screen-256color"
 
