--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -63,3 +63,7 @@ hook_add = '''
  	"let g:vimfiler_file_icon = '-'
  	let g:vimfiler_marked_file_icon = '*'
 '''
+
+[[plugins]]
+repo = 'cespare/vim-toml'
+on_ft = 'toml'
