--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -76,3 +76,9 @@ repo = 'Shougo/context_filetype.vim'
 [[plugins]]
 repo = 'osyo-manga/vim-precious'
 depends = 'context_filetype.vim'
+
+[[plugins]]
+repo = 'bronson/vim-trailing-whitespace'
+hook_add = '''
+  "let g:extra_whitespace_ignored_filetypes = ['md']
+'''
