--- a/vim/deinlazy.toml
+++ b/vim/deinlazy.toml
@@ -22,3 +22,11 @@ hook_post_source = '''
   call submode#map('bufmove', 'n', '', '+', '<C-w>+')
   call submode#map('bufmove', 'n', '', '-', '<C-w>-')
 '''
+
+[[plugins]]
+repo = 'junegunn/vim-emoji'
+on_event = 'InsertEnter'
+hook_source = '''
+  " http://junegunn.kr/2014/06/emoji-completion-in-vim/
+  set completefunc=emoji#complete
+'''
