--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -91,8 +91,8 @@ repo = 'Shougo/context_filetype.vim'
 repo = 'osyo-manga/vim-precious'
 depends = 'context_filetype.vim'
 
-[[plugins]]
-repo = 'bronson/vim-trailing-whitespace'
-hook_add = '''
-  let g:extra_whitespace_ignored_filetypes = ['unite','md']
-'''
+###[[plugins]]
+###repo = 'bronson/vim-trailing-whitespace'
+###hook_add = '''
+###  let g:extra_whitespace_ignored_filetypes = ['unite','md']
+###'''
