--- a/.tmux.conf
+++ b/.tmux.conf
@@ -153,6 +153,6 @@ set-window-option -g clock-mode-colour green #green
 ###set-window-option -g clock-mode-colour green #green
 
 # ----- power line -----
-source ~/.vim/bundle/powerline/powerline/bindings/tmux/powerline-base.conf
-source ~/.vim/bundle/powerline/powerline/bindings/tmux/powerline.conf
-source ~/.vim/bundle/powerline/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
+source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline-base.conf
+source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline.conf
+source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline_tmux_2.1_plus.conf
