--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+run-shell "powerline-daemon -q"
+
 # reset key-bind
 unbind C-b
 # set key-bind >>> Ctl + t
@@ -150,6 +152,6 @@ set-window-option -g clock-mode-colour green #green
 ###set-window-option -g clock-mode-colour green #green
 
 # ----- power line -----
-source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline-base.conf
 source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline.conf
-source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline_tmux_2.1_plus.conf
+#source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline-base.conf
+#source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline_tmux_2.1_plus.conf
