vim-submode lazyやめた

--- a/config/vim/dein.toml
+++ b/config/vim/dein.toml
@@ -96,3 +96,17 @@ depends = 'context_filetype.vim'
 ###hook_add = '''
 ###  let g:extra_whitespace_ignored_filetypes = ['unite','md']
 ###'''
+
+[[plugins]]
+repo = 'kana/vim-submode'
+hook_post_source = '''
+  " `s>`等でウィンドウのサイズ変更を連続実行
+  call submode#enter_with('bufmove', 'n', '', 's>', '<C-w>>')
+  call submode#enter_with('bufmove', 'n', '', 's<', '<C-w><')
+  call submode#enter_with('bufmove', 'n', '', 's+', '<C-w>+')
+  call submode#enter_with('bufmove', 'n', '', 's-', '<C-w>-')
+  call submode#map('bufmove', 'n', '', '>', '<C-w>>')
+  call submode#map('bufmove', 'n', '', '<', '<C-w><')
+  call submode#map('bufmove', 'n', '', '+', '<C-w>+')
+  call submode#map('bufmove', 'n', '', '-', '<C-w>-')
+'''
