--- a/config/vim/dein.toml
+++ b/config/vim/dein.toml
@@ -99,7 +99,7 @@ depends = 'context_filetype.vim'
 
 [[plugins]]
 repo = 'kana/vim-submode'
-hook_post_source = '''
+hook_add = '''
   " `s>`等でウィンドウのサイズ変更を連続実行
   call submode#enter_with('bufmove', 'n', '', 's>', '<C-w>>')
   call submode#enter_with('bufmove', 'n', '', 's<', '<C-w><')
