--- a/tmux.conf
+++ b/tmux.conf
@@ -1,152 +1,89 @@
-run-shell "powerline-daemon -q"
+#----------------------------------------------------------
+# key prefix
 
-# reset key-bind
-unbind C-b
-# set key-bind >>> Ctl + t
-set-option -g prefix C-t
+set-option -g prefix C-Space
+unbind-key C-b
+bind-key C-Space send-prefix
 
-#-Option
-# mode key
-set-window-option -g mode-keys vi
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
+#----------------------------------------------------------
+# OPTIONS
+# - http://man.openbsd.org/tmux#OPTIONS
 
-# ESC キーの効きを良くする http://qiita.com/catatsuy/items/db0a471bf1eabaa21c36
-set -s escape-time 0
-
-# window number 基準
-set-option -g base-index 1
-
-# history size
-set-option -g history-limit 10000
-#set-option -g mouse-select-pane on
-#set-option -g mouse-select-window on
-#set-option -g mouse-resize-pane on
-#set-option -g mode-mouse on
 set-option -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
-set-option -g default-terminal "screen-256color"
+# base-index 1 start
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
-# ----------------------------------------------------------------------
-#     Clipboard
-# ----------------------------------------------------------------------
+# vi
+set-window-option -g mode-keys vi
+
+# reattach-to-user-namespace https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/Usage.md
 set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
-bind-key    -T copy-mode-vi v     send-keys -X begin-selection
-bind-key    -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# ----------------------------------------------------------------------
-#     Window, pane
-# ----------------------------------------------------------------------
+set-option -g escape-time 0
 
-# 設定リロード
-bind r source-file ~/.tmux.conf
-# 直前のウィンドウ
-bind C-t last-window
-# ウィンドウ選択画面
-###bind Space choose-window
+#----------------------------------------------------------
+# KEY BINDINGS
+# - http://man.openbsd.org/tmux#KEY_BINDINGS
+#
+# "bind-key [-nr] [-T key-table] key command [arguments]"
+# - Ctrl : `C-`
+# - Alt : `M-`
+# - Up,Down,Left,Right,BSpace,BTab,DC(Delete),End,Enter,Escape,F1-F12,Home,IC(Insert)
 
-# ペインをすべてウィンドウ分割
-bind b break-pane
+# split-window window分割
+#
+# - `-h` 平行分割
+# - `-v` 垂直分割
+# - `-d` カレントウィンドウの位置は維持したままにする
+# - `-c` start directory
+bind-key c new-window       -c "#{pane_current_path}"
+bind-key H split-window -dh -c "#{pane_current_path}"
+bind-key v split-window -dv -c "#{pane_current_path}"
 
-# window作成するとき、カレントパスを引き継ぐ  http://qiita.com/omega999/items/aa99a9f24a93efe995c1
-bind c new-window -c "#{pane_current_path}"
-# window 水平分割
-unbind '"'
-bind H split-window -v -c "#{pane_current_path}"
-#bind H split-window -v
-# window 垂直分割
-unbind '%'
-bind v split-window -h -c "#{pane_current_path}"
-#bind v split-window -h
+# select-pane ペイン移動
+#
+# - `DLRU` below,left,right,above
+# - `l` last-pane
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-# ペイン移動
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# resize-pane ペインサイズ変更
+bind-key -r C-h resize-pane -L 5
+bind-key -r C-j resize-pane -D 5
+bind-key -r C-k resize-pane -U 5
+bind-key -r C-l resize-pane -R 5
 
-# ペインリサイズ関連vi風
-bind -r C-h resize-pane -L 6
-bind -r C-l resize-pane -R 6
-bind -r C-j resize-pane -D 6
-bind -r C-k resize-pane -U 6
-bind -r s swap-pane -U
+# reload config file
+bind-key R source-file ~/.tmux.conf \; \
+	display-message "source-file done ( ´ー｀)y-~~"
 
-# ペイン番号表示
-bind i display-panes
+# show pane number
+bind-key i display-panes
 
-# ----------------------------------------------------------------------
-#     Appearance
-# ----------------------------------------------------------------------
-### Solarized  https://github.com/altercation/solarized/tree/master/tmux
+# arrange pane-layout
+bind-key -r C-Space next-layout
 
-#### COLOUR (Solarized dark)
+# hol current path
 
-# default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+# copy-mode
+bind-key Space copy-mode
+bind-key -T copy-mode-vi v     send-keys -X begin-selection
+bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+#---------------------------------------------------------
+# color theme
+# - https://github.com/altercation/solarized/blob/master/tmux/README.md
 
-# active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+source-file ${XDG_CONFIG_HOME}/tmux/tmuxcolors-dark.conf
 
-# pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+#---------------------------------------------------------
+# powerline
+# - https://powerline.readthedocs.io/en/latest/usage/other.html#tmux-statusline
 
-# message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
-# clock
-set-window-option -g clock-mode-colour green #green
-
-####### COLOUR (Solarized light)
-###
-#### default statusbar colors
-###set-option -g status-bg white #base2
-###set-option -g status-fg yellow #yellow
-###set-option -g status-attr default
-###
-#### default window title colors
-###set-window-option -g window-status-fg brightyellow #base00
-###set-window-option -g window-status-bg default
-####set-window-option -g window-status-attr dim
-###
-#### active window title colors
-###set-window-option -g window-status-current-fg brightred #orange
-###set-window-option -g window-status-current-bg default
-####set-window-option -g window-status-current-attr bright
-###
-#### pane border
-###set-option -g pane-border-fg white #base2
-###set-option -g pane-active-border-fg brightcyan #base1
-###
-#### message text
-###set-option -g message-bg white #base2
-###set-option -g message-fg brightred #orange
-###
-#### pane number display
-###set-option -g display-panes-active-colour blue #blue
-###set-option -g display-panes-colour brightred #orange
-###
-#### clock
-###set-window-option -g clock-mode-colour green #green
-
-# ----- power line -----
-source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline.conf
-#source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline-base.conf
-#source ~/.cache/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline_tmux_2.1_plus.conf
+run-shell "powerline-daemon -q"
+source-file ${XDG_CACHE_HOME}/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline.conf
