--- a/tmux.conf
+++ b/tmux.conf
@@ -87,3 +87,22 @@ source-file ${XDG_CONFIG_HOME}/tmux/tmuxcolors-dark.conf
 
 run-shell "powerline-daemon -q"
 source-file ${XDG_CACHE_HOME}/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline.conf
+
+#---------------------------------------------------------
+# Tmux Plugin Manager
+# - https://github.com/tmux-plugins/tpm
+
+# Install rpm if not already installed
+if-shell -b "test ! -d ~/.tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+# https://github.com/tmux-plugins/tmux-resurrect
+# * prefix + Ctrl-s - save
+# * prefix + Ctrl-r - restore
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
