--- a/tmux.conf
+++ b/tmux.conf
@@ -76,12 +76,6 @@ bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-us
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 #---------------------------------------------------------
-# color theme
-# - https://github.com/altercation/solarized/blob/master/tmux/README.md
-
-source-file ${XDG_CONFIG_HOME}/tmux/tmuxcolors-dark.conf
-
-#---------------------------------------------------------
 # powerline
 # - https://powerline.readthedocs.io/en/latest/usage/other.html#tmux-statusline
 
@@ -103,6 +97,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @continuum-restore 'on'
+
+# https://github.com/seebi/tmux-colors-solarized
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized 'dark'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
