--- a/tmux.conf
+++ b/tmux.conf
@@ -80,7 +80,7 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-us
 # - https://powerline.readthedocs.io/en/latest/usage/other.html#tmux-statusline
 
 run-shell "powerline-daemon -q"
-source-file ${XDG_CACHE_HOME}/dein/repos/github.com/powerline/powerline/powerline/bindings/tmux/powerline.conf
+source-file /usr/local/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 
 #---------------------------------------------------------
 # Tmux Plugin Manager
