--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,1 @@
-.DS_Store
-Desktop.ini
-
-# thumbnail cache files
-Thumbs.db
-
-# python binary files
-*.pyc
-
-# Vim
-.*.un~
-
-# IntelliJ
-*.iml
-*.ipr
-*.iws
-
-Gemfile.lock
-
-*.bak
+Brewfile.lock.json
